osorg theme. add overflow hidden to horizontal view to prevent sidescrolling

--- a/openscholar/themes/custom/openscholar_theme/css/openscholar-theme.css
+++ b/openscholar/themes/custom/openscholar_theme/css/openscholar-theme.css
@@ -6,6 +6,7 @@ body {
   font: 12px "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
   background: #373737;
   color: #333;
+  overflow-x: hidden;
   }
 
 
